--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .eslintrc.cjs
 vite.config.js
 backend/meyers-database-eddda2be6c6c.json
+backend/__pycache__/
+backend/destination.csv
+
 # Logs
 logs
 *.log
