--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ vite.config.js
 backend/meyers-database-eddda2be6c6c.json
 backend/__pycache__/
 backend/destination.csv
+backend/instructions.txt
+backend/constants.py
 
 # Logs
 logs
