--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,8 @@ backend/meyers-database-eddda2be6c6c.json
 backend/__pycache__/
 backend/destination.csv
 backend/instructions.txt
-backend/constants.py
+constants.py
+src/static/lab_emails.json
 
 # Logs
 logs
