--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "csv-parse": "^5.5.6",
+    "date-fns": "^3.6.0",
     "express": "^4.19.2",
     "lucide-react": "^0.407.0",
     "multer": "^1.4.5-lts.1",
